# public_opinion

./: ._.git  .csv  .env.example  .env_example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CURRENT_STATUS.md  DEPLOYMENT.md  DataAnalysisSystem.spec  Dockerfile  FEATURES_RESTORATION.md  NEW_FEATURES.md  QUICKSTART.md  QUICK_START.md  README.md  README_v2.md  REFACTORING_NOTES.md  REFACTORING_SUMMARY.md  Readme.md  VERIFICATION_REPORT.md  app.py  app_basic.py  build_prod.sh  changelog.md  changelog_ai_assistant.md  changelog_compatibility.md  changelog_streaming_fix.md  config.json.example  debug_app.py  deploy.sh  diagnose.py  docker-compose.yml  douyin_temp.csv  env  gitignore  gunicorn_conf.py  init_admin.py  install_yuqing.sh  launcher.py  (+38 more)
backend/: .env.example  .gitignore  README.md  requirements.txt  run_desktop.py
config/: __init__.py  settings.py
content/: pengpai.csv
docs/: api_documentation.md  database_design.md  deployment.md  desktop_development.md  desktop_release_packaging_construction.md  development.md  (+4 more)
frontend/src-tauri/: Cargo.toml  tauri.bundle.conf.json  tauri.conf.json  tauri.windows.bundle.conf.json
frontend/src-tauri/resources/backend/public_opinion_backend/_internal/PIL/.dylibs/: libbrotlicommon.1.1.0.dylib  libbrotlidec.1.1.0.dylib  libfreetype.6.dylib  libpng16.16.dylib
frontend/src-tauri/resources/backend/public_opinion_backend/_internal/email_validator-2.3.0.dist-info/: RECORD
frontend/src-tauri/resources/backend/public_opinion_backend/_internal/websockets-15.0.1.dist-info/: RECORD
frontend/src-tauri/src/: main.rs
(+398 files in other folders)
