[package]
name = "public_opinion_desktop"
version = "0.1.0"
description = "Public Opinion desktop shell powered by Tauri"
authors = ["Codex"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.10.3", features = [] }
rfd = "0.15.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
